# consolants

./: .gitignore  .gitmodules  CMakeLists.txt  ConsolAnts.sln  README.MD  RunSimulation.bat  RunUnittests.bat
ConsolAnts/: Color.cpp  Color.h  ConsolAnts.vcxproj  ConsolAnts.vcxproj.filters  Drawable.h  Pixel.cpp  Pixel.h  Point.cpp  Point.h  Simulation.cpp  Simulation.h  Window.cpp  Window.h  main.cpp
consolants/: CMakeLists.txt
consolants/logic/: CMakeLists.txt
consolants/logic/inc/: Ant.h  Anthill.h  Food.h  Object.h  Simulation.h  World.h
consolants/logic/src/: Ant.cpp  Anthill.cpp  Food.cpp  Object.cpp  Simulation.cpp  World.cpp
consolants/main/: CMakeLists.txt
consolants/main/inc/: Consolants.h
consolants/main/src/: Consolants.cpp  main.cpp
consolants/math/: CMakeLists.txt
consolants/math/inc/: Point.h
consolants/math/src/: Point.cpp
consolants/view/: CMakeLists.txt
consolants/view/inc/: Color.h  CoutStringPreparator.h  Drawable.h  Pixel.h  Window.h
consolants/view/src/: Color.cpp  CoutStringPreparator.cpp  Pixel.cpp  Window.cpp
unittests/: CMakeLists.txt
unittests/consolants/: CMakeLists.txt
unittests/consolants/logic/: CMakeLists.txt
unittests/consolants/logic/inc/: AntTest.h  WorldTest.h
unittests/consolants/logic/src/: AntTest.cpp  FoodTest.cpp  WorldTest.cpp
unittests/consolants/main/: CMakeLists.txt
unittests/consolants/main/inc/: ConsolantsTest.h
unittests/consolants/main/src/: ConsolantsTest.cpp
unittests/consolants/math/: CMakeLists.txt
unittests/consolants/math/src/: PointTest.cpp
unittests/consolants/view/: CMakeLists.txt
unittests/consolants/view/inc/: ColorTest.h  CoutStringPreparatorTest.h  WindowTest.h
unittests/consolants/view/src/: ColorTest.cpp  CoutStringPreparatorTest.cpp  PixelTest.cpp  WindowTest.cpp
